--- a/rest_api/src/main/resources/static/assets/css/jobs.css
+++ b/rest_api/src/main/resources/static/assets/css/jobs.css
@@ -27,3 +27,20 @@
     /*filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#3ac5c8', endColorstr='#0b509e', GradientType=1);*/
     /* IE6-9 fallback on horizontal gradient */
 }
+
+.modal-dialog {
+    width: 80vw;
+}
+
+.blog-desc p {
+    margin-bottom: 10px;
+}
+
+.blog-single h3.post-title,
+.blog-desc h3 {
+    padding: 8px 0 10px;
+    margin: 0;
+    line-height: 1.3;
+    font-weight: bold;
+    font-size: 28px;
+}
