--- a/rest_api/src/main/resources/static/assets/css/search.css
+++ b/rest_api/src/main/resources/static/assets/css/search.css
@@ -1,3 +1,16 @@
+input {
+    border: 1px solid lightgray !important;
+}
+
+label {
+    font-weight: lighter !important;
+}
+
+.filter_menu_title {
+    font-weight: bolder !important;
+    font-size: 16px !important;
+}
+
 /************************************
 MODAL
 ************************************/
