Refactored some aspects of the webpage. Implemented feature and its tests.

--- a/rest_api/src/main/resources/static/assets/components/navbar.html
+++ b/rest_api/src/main/resources/static/assets/components/navbar.html
@@ -1,14 +1,15 @@
-<nav class="navbar navbar-inverse navbar-fixed-top header-distributed" >
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="navbar-brand header-logo" id="home" href="/welcomePage">Cloud<span>IT</span></a>
+<nav class="navbar navbar-expand-md navbar-dark bg-dark navbar-fixed-top" style="font: bold 16px sans-serif;">
+    <a style="color:  #ffffff;font: normal 28px 'Cookie', cursive;" class="navbar-brand header-logo" id="home" href="/welcomePage">Cloud<span style="color:  #5383d3;">IT</span></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="navbar-nav" id="navBarList">
+            <a class="nav-item nav-link" id="search" href="/searchPage">Search</a>
+            <a class="nav-item nav-link" id="messages" href="/messagesPage">Messages</a>
+            <a class="nav-item nav-link" id="jobs" href="/jobsPage">MyJobs</a>
+            <a class="nav-item nav-link" id="profile" href="/profilePage">Profile</a>
+            <a class="nav-item nav-link" id="about" href="/aboutPage">About Us</a>
         </div>
-        <ul class="nav navbar-nav" id="navBarList">
-            <li><a id="search" href="/searchPage">Search</a></li>
-            <li><a id="messages" href="/messagesPage">Messages</a></li>
-            <li><a id="jobs" href="/jobsPage">MyJobs</a></li>
-            <li><a id="profile" href="/profilePage">Profile</a></li>
-            <li><a id="about" href="/aboutPage">About Us</a></li>
-        </ul>
     </div>
 </nav>
