--- a/rest_api/src/main/resources/static/assets/css/search.css
+++ b/rest_api/src/main/resources/static/assets/css/search.css
@@ -1327,3 +1327,25 @@ RESPONSIVE
         font-size: 24px;
     }
 }
+
+
+.mtb-10 {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.area-card {
+    border-color: #000000;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 25px;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    display: inline-block;
+    padding: 5px;
+}
+
+.userSearchResult {}
+
+.userSearchType {}
