Updates on loginPage and aboutPage; navbar improved; feature started.

--- a/rest_api/src/main/resources/static/assets/components/navbar.html
+++ b/rest_api/src/main/resources/static/assets/components/navbar.html
@@ -10,6 +10,7 @@
             <a class="nav-item nav-link" id="jobs" href="/jobsPage">MyJobs</a>
             <a class="nav-item nav-link" id="profile" href="/profilePage">Profile</a>
             <a class="nav-item nav-link" id="about" href="/aboutPage">About Us</a>
+            <a class="nav-item nav-link" id="signout" onclick="logout()" href="/loginPage" style="margin-left:60vw; "><span class="fa fa-user"></span> Sign Out</a>
         </div>
     </div>
 </nav>
