Progress in feature

--- a/rest_api/src/main/resources/static/assets/css/messageCenter.css
+++ b/rest_api/src/main/resources/static/assets/css/messageCenter.css
@@ -146,8 +146,52 @@ ul.chat-list {
     color: #d4d3d3;
 }
 
-
 .chat-txt {
     float: left;
     margin-right: 5px;
+}
+
+
+
+
+.dropbtn {
+    background-color: #2980b9;
+    color: white;
+    border-color: #2980b9;
+}
+
+.dropup {
+    position: relative;
+    display: inline-block;
+}
+
+.dropup-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    bottom: 38px;
+    right: 146px;
+    z-index: 1;
+    margin-right: 0;
+}
+
+.dropup-content p {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropup-content p:hover {
+    background-color: #ccc;
+}
+
+.dropup:hover .dropup-content {
+    display: block;
+}
+
+.dropup:hover .dropbtn {
+    background-color: #3498DB;
+    border-color: #3498DB;
 }
